add the base layout

--- a/src/TLB/CoreBundle/Resources/views/Core/index.html.twig
+++ b/src/TLB/CoreBundle/Resources/views/Core/index.html.twig
@@ -2,6 +2,6 @@
 {% block title %}Accueil - {{  parent() }}{% endblock %}
 
 {% block body %}
-    ceci est un essai
+    <p>ceci est un essai</p>
 
 {% endblock %}
