--- a/src/TLB/CoreBundle/Resources/views/layout.html.twig
+++ b/src/TLB/CoreBundle/Resources/views/layout.html.twig
@@ -4,17 +4,80 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="with=device-with, initiale-scale=1" />
         <title>{% block title %}Tangui Le Bourdonnec - Portfolio{% endblock %}</title>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
         {% block stylesheets %}
-            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
     <div class="container">
+        <div class="row">
+            <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#">TANGUI LE BOURDONNEC</a>
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="active"><a href="#">Présentation <span class="sr-only">(current)</span></a></li>
+                            <li><a href="#">Compétences</a></li>
+                            <li><a href="#">Portfolio</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+            </nav>
+        </div>
+        <div class="row">
         <div id="content" class="col-md-12">
             {% block body %}
             {% endblock %}
         </div>
+        </div>
+        <hr>
+        <footer>
+            <div class="container-fluid" id="footer">
+                <div class="row">
+                    <div class="col-xs-12 col-md-4">
+                        <p>Site crée et développé par Tangui Le Bourdonnec</p>
+                    </div>
+                    <div class="col-xs-12 col-md-4">
+                        Copyright © 2017
+                    </div>
+                    <div id="social-icons-footer" class="col-xs-12 col-md-4">
+                        <div class="row">
+                            <div class="col-xs-12 col-md-4">
+                                <a href="https://www.linkedin.com/in/tangui-le-bourdonnec" target="_blank">
+                                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                            <div class="col-xs-12 col-md-4">
+                                <a href="https://github.com/tanguilb" target="_blank">
+                                    <i class="fa fa-github" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                            <div class="col-xs-12 col-md-4">
+                                <a href="https://twitter.com/tanguilb8" target="_blank">
+                                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
     {% block javascripts %}
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
