add section on index.html.twig in corebundle

--- a/src/TLB/CoreBundle/Resources/views/Core/index.html.twig
+++ b/src/TLB/CoreBundle/Resources/views/Core/index.html.twig
@@ -2,6 +2,86 @@
 {% block title %}Accueil - {{  parent() }}{% endblock %}
 
 {% block body %}
-    <p>ceci est un essai</p>
+    <section id="about-me">
+        <div class="head-title"></div>
 
+        <h3>Qui je suis</h3>
+
+        <p>Je suis un ancien éducateur spécialisé. J'ai travaillé principalement avec les jeunes en insertions. <br/>
+            J'ai découvert une nouvelle passion: <strong>le code.</strong><br/>
+        J'ai étudié pendant 5 mois le langage PHP et le framework symfony à la Wild Code School de Lyon. J'ai égalemnent mis en pratique la méthode scrum pour réaliser deux projets pour des clients au cours de cette formation intensive.
+        <br />Suite à cette formation j'effectue un stage au sein de la fondation OVE pour développer une platforme qui devrait aider les personnes en situation de handicap à se retrouver dans la complexité des démarches.</p>
+
+
+    </section>
+    <section id="skills">
+        <div class="head-title"></div>
+
+        <h3>Compétences</h3>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+    </section>
+    <section id="portfolio">
+        <div class="head-title"></div>
+
+        <h3>Portfolio</h3>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+    </section>
+    <section id="contact">
+        <div class="head-title"></div>
+        <h3>Contact</h3>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+    </section>
 {% endblock %}
