--- a/src/TLB/CoreBundle/Resources/views/skills/show.html.twig
+++ b/src/TLB/CoreBundle/Resources/views/skills/show.html.twig
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <th>Logo</th>
-                <td>{{ skill.logo }}</td>
+                <td>{{ skill.logoName }}</td>
             </tr>
             <tr>
                 <th>Value</th>
